--- a/siteSomMG/css/style.css
+++ b/siteSomMG/css/style.css
@@ -5,8 +5,6 @@ Layout desenvovido por : André Laurentino
 Imports
 **/
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
-@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
 
 /**
 Body
@@ -36,8 +34,10 @@ Header
 .topo{
     background-image: url(../img/capa.png);
     background-size: cover;
-    background-repeat: no-repeat;   
-    height: 30vh;    
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    height: 30vh;
+    width: 92%;
 }
 .topo .container-fluid{
     padding: 2em 0;
@@ -73,9 +73,6 @@ secttions
     background-color: #fff;
     margin: 0 auto;
     width: 92%;
-}
-main .container{
-  padding: 1em;
 }
 /**
 Textos
@@ -141,277 +138,260 @@ Slides
 /**
 Galeria
 **/
-.snip1585 {
-  background-color: #000;
-  color: #fff;
-  display: inline-block;
-  font-family: 'Roboto', sans-serif;
-  font-size: 24px;
-  margin: 8px;
-  max-width: 315px;
-  min-width: 230px;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  width: 100%;
+.galeria{
+    margin: 0 auto;
+    width: 100%;
+} 
+.galeria li{
+    display: block;
+    list-style-type: none;
+    margin-right: 0.90em;
 }
-
-.snip1585 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.45s ease;
-  transition: all 0.45s ease;
-}
-
-.snip1585:before,
-.snip1585:after {
-  background-color: rgba(0, 0, 0, 0.5);
-  border-top: 50px solid rgba(0, 0, 0, 0.5);
-  border-bottom: 50px solid rgba(0, 0, 0, 0.5);
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  content: '';
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  z-index: 1;
-  opacity: 0;
-}
-
-.snip1585:before {
-  -webkit-transform: scaleY(2);
-  transform: scaleY(2);
-}
-
-.snip1585:after {
-  -webkit-transform: scaleY(2);
-  transform: scaleY(2);
-}
-
-.snip1585 img {
-  vertical-align: top;
-  max-width: 100%;
-  backface-visibility: hidden;
-}
-
-.snip1585 figcaption {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  align-items: center;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  line-height: 1.1em;
-  opacity: 0;
-  z-index: 2;
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-}
-
-.snip1585 h3 {
-  font-size: 1em;
-  font-weight: 400;
-  letter-spacing: 1px;
-  margin: 0;
-  text-transform: uppercase;
-}
-
-.snip1585 h3 span {
-  display: block;
-  font-weight: 700;
-}
-
-.snip1585 a {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 3;
-}
-
-.snip1585:hover > img,
-.snip1585.hover > img {
-  opacity: 0.7;
-}
-
-.snip1585:hover:before,
-.snip1585.hover:before,
-.snip1585:hover:after,
-.snip1585.hover:after {
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  opacity: 1;
-}
-
-.snip1585:hover figcaption,
-.snip1585.hover figcaption {
-  opacity: 1;
-  -webkit-transition-delay: 0.1s;
-  transition-delay: 0.1s;
-}
-/**
-Noticias box
-**/
-figure.snip1237 {
-  font-family: 'Raleway', Arial, sans-serif;
+.snip1554 {
+    background-color: #045e78;
+    color: #ffffff;
+    display: inline-block;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    margin: 8px;
+    max-width: 315px;
+    min-width: 230px;
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    width: 100%;
+  }
+  
+  .snip1554 * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: all 0.45s ease;
+    transition: all 0.45s ease;
+  }
+  
+  .snip1554:after {
+    background-color: white;
+    opacity: 0.6;
+    top: 0;
+    bottom: 0;
+    content: '';
+    left: -100%;
+    position: absolute;
+    width: 200px;
+    box-shadow: 0 0 100px white;
+    -webkit-transform: skew(-20deg);
+    transform: skew(-20deg);
+    -webkit-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+  }
+  
+  .snip1554 img {
+    vertical-align: top;
+    max-width: 100%;
+    backface-visibility: hidden;
+  }
+  
+  .snip1554 figcaption {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    line-height: 1em;
+    opacity: 0;
+  }
+  
+  .snip1554 h3 {
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    font-size: 1.4em;
+    font-weight: 400;
+    line-height: 1.1em;
+    margin: 0;
+    text-transform: uppercase;
+  }
+  
+  .snip1554 h3 span { font-weight: 700;}
+  
+  .snip1554 a {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+  }  
+  .snip1554:hover > img,
+  .snip1554.hover > img {
+    opacity: 0.4;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+  }  
+  .snip1554:hover:after,
+  .snip1554.hover:after {left: 200%;}
+  
+  .snip1554:hover figcaption,
+  .snip1554.hover figcaption { opacity: 1;}  
+  .snip1518 {
+  font-family: 'Lato', Arial, sans-serif;
   position: relative;
   float: left;
   overflow: hidden;
   margin: 10px 1%;
-  min-width: 220px;
+  min-width: 250px;
   max-width: 310px;
   width: 100%;
-  background: #1a1a1a;
-  color: #ffffff;
-  text-align: left;
+  background-color: #ffffff;
+  color: #2B2B2B;
+  text-align: center;
+  font-size: 16px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 100%);
 }
-figure.snip1237 * {
+
+.snip1518 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-transition: all 0.35s ease-in-out;
-  transition: all 0.35s ease-in-out;
 }
-figure.snip1237 .image {
-  position: relative;
-}
-figure.snip1237 img {
+
+.snip1518 img {
   max-width: 100%;
   vertical-align: top;
-}
-figure.snip1237 i {
-  position: absolute;
-  top: 7px;
-  left: 12px;
-  font-size: 32px;
-  opacity: 0;
-  z-index: 2;
-  -webkit-transition-delay: 0;
-  transition-delay: 0;
-}
-figure.snip1237 h3 {
-  margin: 0 0 10px;
-  font-weight: 500;
-}
-figure.snip1237 p {
-  margin: 0;
-}
-figure.snip1237:before,
-figure.snip1237:after {
-  width: 120px;
-  height: 120px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: '';
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-  z-index: 1;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.35) 100%);
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.35) 100%);
-  -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
-}
-figure.snip1237:before {
-  background-color: #20638f;
-  -webkit-transform: skew(-45deg) translateX(-150%);
-  transform: skew(-45deg) translateX(-150%);
-  border-right: 1px solid #20638f;
-}
-figure.snip1237:after {
-  background-color: #962d22;
-  -webkit-transform: skew(-45deg) translateX(-175%);
-  transform: skew(-45deg) translateX(-175%);
-  border-right: 1px solid #962d22;
-}
-figure.snip1237 figcaption {
-  padding: 25px;
-  background-color: #ffffff;
-  color: #000000;
   position: relative;
-  font-size: 0.9em;
 }
-figure.snip1237 figcaption p {
-  margin-bottom: 15px;
+
+.snip1518 figcaption {
+  padding: 10%;
+  padding-bottom: calc(25%);
+  background-color: #ffffff;
 }
-figure.snip1237 figcaption:before {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  bottom: 100%;
-  right: 0;
-  content: '';
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.35) 100%);
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.35) 100%);
-  background-color: #20638f;
-  -webkit-transform: skew(-45deg) translateX(50%);
-  transform: skew(-45deg) translateX(50%);
-  border-right: 1px solid #20638f;
-}
-figure.snip1237 .read-more {
-  display: inline-block;
-  width: auto;
-  border: 2px solid #20638f;
-  padding: 0.4em 0.6em;
-  color: #20638f;
-  text-decoration: none;
-  font-weight: 800;
-  font-size: 0.9em;
+
+.snip1518 h3 {
+  font-family: 'Oswald';
   text-transform: uppercase;
-}
-figure.snip1237 .read-more:hover {
-  background-color: #20638f;
-  color: #ffffff;
-}
-figure.snip1237 .date {
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
-  color: #fff;
-  max-height: 48px;
-  max-width: 48px;
-  text-align: center;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 400;
+  line-height: 24px;
+  margin: 3px 0;
+}
+
+.snip1518 h5 {
+  font-weight: 400;
+  margin: 0;
   text-transform: uppercase;
+  color: #888;
+  letter-spacing: 1px;
+}
+
+.snip1518 footer {
+  border-top: 1px solid rgba(0, 0, 0, 0.065);
+  padding: 0 20px;
+  font-size: 13px;
+  line-height: 50px;
+  text-align: left;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.snip1518 footer .icons {
+  position: absolute;
+  right: 20px;
+  top: 0;
+}
+
+.snip1518 footer .icons > div {
+  display: inline-block;
+  margin-left: 8px;
+}
+
+.snip1518 footer .icons i {
+  display: inline-block;
+  margin-right: 5px;
+  font-size: 1em;
+}
+
+.snip1518 a {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
   z-index: 1;
 }
-figure.snip1237 .date span {
-  display: block;
-  line-height: 24px;
+@media(min-width: 48em){
+    .galeria li{
+        display: inline-block;
+    }
 }
-figure.snip1237 .date .month {
-  font-size: 14px;
+/**
+Noticias box
+**/
+.index-content a:hover{
+    color:black;
+    text-decoration:none;
 }
-figure.snip1237:hover i,
-figure.snip1237.hover i {
-  opacity: 0.7;
-  -webkit-transition-delay: 0.3s;
-  transition-delay: 0.3s;
+.index-content{
+    margin-bottom:20px;
+    padding:50px 0px;
+    
 }
-figure.snip1237:hover:before,
-figure.snip1237.hover:before {
-  -webkit-transition-delay: 0s;
-  transition-delay: 0s;
-  -webkit-transform: skew(-45deg) translateX(-50%);
-  transform: skew(-45deg) translateX(-50%);
+.index-content .row{
+    margin-top:20px;
 }
-figure.snip1237:hover:after,
-figure.snip1237.hover:after {
-  -webkit-transition-delay: 0.1s;
-  transition-delay: 0.1s;
-  -webkit-transform: skew(-45deg) translateX(-75%);
-  transform: skew(-45deg) translateX(-75%);
+.index-content a{
+    color: black;
+}
+.index-content .card{
+    background-color: #FFFFFF;
+    padding:0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius:4px;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
+
+}
+.index-content .card:hover{
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
+    color:black;
+}
+.index-content .card img{
+    width:100%;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.index-content .card h4{
+    margin:20px;
+}
+.index-content .card p{
+    margin:20px;
+    opacity: 0.65;
+}
+.index-content .blue-button{
+    width: 100px;
+    -webkit-transition: background-color 1s , color 1s; /* For Safari 3.1 to 6.0 */
+    transition: background-color 1s , color 1s;
+    min-height: 20px;
+    background-color: #002E5B;
+    color: #ffffff;
+    border-radius: 4px;
+    text-align: center;
+    font-weight: lighter;
+    margin: 0px 20px 15px 20px;
+    padding: 5px 0px;
+    display: inline-block;
+}
+.index-content .blue-button:hover{
+    background-color: #dadada;
+    color: #002E5B;
+}
+@media (max-width: 768px) {
+
+    .index-content .col-lg-4 {
+        margin-top: 20px;
+    }
 }
 /**
 Midias
@@ -492,137 +472,4 @@ footer .logo{
   display: block
   margin: 0 auto 30px
   box-shadow: 0 0 3px #ccc
-}
-/**
-Span
-**/
-.span{
-  margin-bottom: 1em;
-  padding: 0.2em 1em;
-}
-.vermelho{
-  background-color: crimson;
-  color: #fff;
-  text-transform: uppercase;
-}
-.vermelho h2{
-  font-size: 1.2em;
-}
-/**
-Slide-2
-**/
-
-/**
-Table-music
-**/
-.clickable{
-    cursor: pointer;   
-}
-
-.panel-heading div {
-  margin-top: -18px;
-  font-size: 15px;
-}
-.panel-heading div span{
-  margin-left:5px;
-}
-.panel-body{
-  display: none;
-}
-/**
-Player
-**/
-.player {
-  display: block;
-  margin: 0 auto;
-  max-width: 480px;
-  padding: 1em;
-}
-.player-btn {
-  border: none;
-  padding: 0.5em 0.75em;
-  background: none;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 0.8em;
-  margin: 1em 0.25em;
-  color: #333;
-  border-radius: 0.25em;
-  cursor: pointer;
-}
-.player-btn:hover {
-  background: #333;
-  color: #fff;
-  -webkit-transition: 1s linear;
-  transition: 1s linear;
-}
-.player-controls {
-  text-align: center;
-}
-.player-progress {
-  display: block;
-  width: 100%;
-  height: 0.25em;
-  background: #333;
-  margin: 0.25em 0;
-  position: relative;
-}
-.player-progress-bar {
-  background: #dc143c;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-.player-playlist {
-  list-style: none;
-  overflow: auto;
-  width: 100%;
-  max-height: 240px;
-  margin: 0;
-  padding: 0;
-  margin-top: 1em;
-  border: none;
-}
-.player-playlist-current {
-  color: #f33;
-  border-left: 0.25em solid currentColor;
-  font-weight: bold;
-}
-.player-playlist li {
-  display: block;
-  width: 100%;
-  cursor: pointer;
-  padding: 0.5em 1em;
-  -webkit-transition: all 0.21s ease;
-  transition: all 0.21s ease;
-}
-.player-playlist li:hover {
-  background: #e0e0e0;
-}
-/**
-Contato
-**/
-.red{
-  margin: 2em auto;
-  width: 100%;
-}
-.red fieldset{
-    border:1px double #333;    
-    padding:10px;
-    border-radius:4px
-}
-.red fieldset legend{
-  background-color: crimson;
-  color: #fff;
-  padding:10px;    
-  margin:4px;
-  margin-bottom:20px;
-  border-radius:8px;
-  text-transform: uppercase;
-}
-@media(min-width: 48em){
-  .red{
-    width: 60%;
-  }
 }
